fix: dropzone drag highlight flickering

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -373,3 +373,7 @@ td {
         transform: translate3d(4px, 0, 0);
     }
 }
+
+#dropZone > * {
+    pointer-events: none;
+}
